att: incluido tratameno de erros e validações

--- a/04 - quarto-semestre/LABORATÓRIO DE PROGRAMAÇÃO IV/AppBiblioteca/src/main/resources/application-dev.properties
+++ b/04 - quarto-semestre/LABORATÓRIO DE PROGRAMAÇÃO IV/AppBiblioteca/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 #conexao ao postgresql
-spring.datasource.url=jdbc:postgresql://localhost:5432/bibliotecadb
+spring.datasource.url=jdbc:postgresql://localhost:5432/bdbiblioteca
 spring.datasource.username=postgres
 spring.datasource.password=postdba
 
