--- a/04 - quarto-semestre/LABORATÓRIO DE PROGRAMAÇÃO IV/AppBiblioteca/src/main/resources/application-test.properties
+++ b/04 - quarto-semestre/LABORATÓRIO DE PROGRAMAÇÃO IV/AppBiblioteca/src/main/resources/application-test.properties
@@ -5,7 +5,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 #configuracao acesso ao banco --> jdbc:h2:file:~/bibliotecadb
-spring.datasource.url=jdbc:h2:mem:bibliotecadb
+spring.datasource.url=jdbc:h2:mem:bdbiblioteca
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
