--- a/04 - quarto-semestre/LABORATÓRIO DE PROGRAMAÇÃO IV/suporteos/src/main/resources/application-test.properties
+++ b/04 - quarto-semestre/LABORATÓRIO DE PROGRAMAÇÃO IV/suporteos/src/main/resources/application-test.properties
@@ -4,8 +4,8 @@ spring.h2.console.enabled=true
 #path para acesso
 spring.h2.console.path=/h2-console
 
-#configuracao acesso ao banco --> jdbc:h2:file:~/cursosbd
-spring.datasource.url=jdbc:h2:mem:cursosbd
+#configuracao acesso ao banco --> jdbc:h2:file:~/cursodb
+spring.datasource.url=jdbc:h2:mem:cursodb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
